--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
     </div>
   
     <!-- Hamburger Menu for Mobile -->
-    <button class="lg:hidden p-2 focus:outline-none" (click)="toggleMenu()" routerLink="/home">
+    <button class="lg:hidden p-2 focus:outline-none" (click)="toggleMenu()">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
       </svg>
@@ -29,4 +29,4 @@
       <button mat-button class="text-white" (click)="openLoginDialog('driver')">Driver Login</button>
     </div>
     }
-  </mat-toolbar>
+</mat-toolbar>
