--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -7,8 +7,9 @@
       {{ chip.label }}
     </mat-chip-option>
     }
-   <div class="ml-2 mt-2 md:mt-0">
+   <div class="ml-2 mt-2 mr-2s md:mt-0 flex gap-2">
     <button mat-raised-button (click)="adminLogout()">Logout</button>
+    <button mat-raised-button (click)="reloadPage()"><mat-icon>refresh</mat-icon></button>
    </div>
   </mat-chip-listbox>
  
@@ -109,7 +110,7 @@
       <th mat-header-cell *matHeaderCellDef class="py-2 px-4 font-semibold text-gray-700"> {{ column }} </th>
       <td mat-cell *matCellDef="let element" class="py-2 px-4 text-gray-600">
         {{ element[column] }}
-        @if (column === 'actions') {
+        @if (column == 'actions') {
         <ng-container>
           <div class="flex">
             <button mat-icon-button (click)="editLocationPrice(element)">
@@ -261,7 +262,7 @@
 </div>
 }
 
-@if (showCustomerRecordEditForm) {
+@if (showCustomerRecordEditForm && selectedChip.key !== 'enquiry' && selectedChip.key !== 'rental' && selectedChip.key !== 'onway') {
 <mat-dialog-content class="p-8 bg-white rounded-lg shadow-lg">
   <form [formGroup]="customerRecordEditForm" class="space-y-8">
     <h3 class="text-2xl font-bold text-gray-800 mb-6">Edit Customer Details</h3>
@@ -380,6 +381,18 @@
       <ng-container matColumnDef="DropLocationOrPackages">
         <th mat-header-cell *matHeaderCellDef> dropLocation/package Field</th>
         <td mat-cell *matCellDef="let element"> {{element.dropLocationOrPackages}} </td>
+      </ng-container>
+
+      <!-- Time Field Column -->
+      <ng-container matColumnDef="time">
+        <th mat-header-cell *matHeaderCellDef>Time</th>
+        <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+      </ng-container>
+
+      <!-- Date Field Column -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
       </ng-container>
   
       <!-- Mobile Number Column -->
