--- a/src/app/cab-onway-dialog/cab-onway-dialog.component.html
+++ b/src/app/cab-onway-dialog/cab-onway-dialog.component.html
@@ -154,7 +154,7 @@
             <h2 class="text-2xl font-bold text-gray-800 mb-2">Record Added Successfully!</h2>
             <p class="text-gray-600 underline">We will call you within 10 minutes.</p>
     
-            <button mat-dialog-close mat-raised-button color="accent" class="mt-6 w-full">
+            <button mat-dialog-close mat-raised-button (click)="reloadPage()" color="accent" class="mt-6 w-full">
                 Close
             </button>
         </div>
