added sendGrid mail

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,13 +30,13 @@
             <div class="w-full sm:w-1/2 lg:w-2/12 px-4 mb-8 cursor-pointer">
                 <h4 class="text-base font-semibold text-dark-800 mb-4">Company</h4>
                 <ul class="space-y-2">
-                    <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm"
-                            (click)="scrollToAbout('about')">Kitecab</a></li>
-                    <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm"
+                    <li><a class="text-dark-700 hover:text-dark-900 text-sm"
+                        (click)="openLoginDialog('admin')">Kitecab</a></li>
+                    <li><a class="text-dark-700 hover:text-dark-900 text-sm"
                             (click)="scrollToAbout('about')">Home</a></li>
-                    <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm"
+                    <li><a class="text-dark-700 hover:text-dark-900 text-sm"
                             (click)="scrollToPlaces('home')">Book Cab</a></li>
-                    <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm"
+                    <li><a class="text-dark-700 hover:text-dark-900 text-sm"
                             (click)="scrollToPlaces('zzz')">About</a></li>
                 </ul>
             </div>
