--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section -->
-<section class="bg-gradient-to-tr from-orange-200 to-orange-400 py-10">
+<section class="bg-gradient-to-tr from-orange-200 to-orange-400 py-8">
   <img src="../../assets/wp.png" (click)="bookingByWhatsapp()" class="cursor-pointer bottom-0 right-0 z-50 h-20 w-28 fixed" alt="whatsapp-icon">
   <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-6">
     <!-- Left Side Content -->
@@ -23,8 +23,8 @@
           WHATSAPP</button>
       </div>
       <p class="text-gray-700 text-lg md:flex hidden flex-col">
-        <span>Whether it's a one-way trip, a round journey, or local rentals,</span>
-        <span>we've got you covered. Choose the option that best fits your needs,</span>
+        <!-- <span>Whether it's a one-way trip, a round journey, or local rentals,</span> -->
+        <span>Choose the option that best fits your needs,</span>
         <span>and travel with comfort, safety, and reliability.</span>
       </p>
 
