--- a/src/app/cab-rental-dialog/cab-rental-dialog.component.html
+++ b/src/app/cab-rental-dialog/cab-rental-dialog.component.html
@@ -157,7 +157,7 @@
             </div>
     
             <h2 class="text-2xl font-bold text-gray-800 mb-2">Record Added Successfully!</h2>
-            <p class="text-gray-600 underline">We will call you within 10 minutes.</p>
+            <p class="text-gray-600 underline">We will contact you shortly.</p>
     
             <button mat-dialog-close (click)="reloadPage()" mat-raised-button color="accent" class="mt-6 w-full">
                 Close
