--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- Hero Section -->
 <section class="bg-gradient-to-tr from-orange-200 to-orange-400 py-8">
-  <img src="../../assets/wp.png" (click)="bookingByWhatsapp()" class="cursor-pointer bottom-0 right-0 z-50 h-20 w-28 fixed" alt="whatsapp-icon">
+  <img src="assets/wp.png" (click)="bookingByWhatsapp()" class="cursor-pointer bottom-0 right-0 z-50 h-20 w-28 fixed" alt="whatsapp-icon">
   <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-6">
     <!-- Left Side Content -->
     <div class="text-left space-y-4 md:w-1/2">
