--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,7 +19,7 @@
             <div class="w-full sm:w-1/2 lg:w-2/12 px-4 mb-8 cursor-pointer md:ml-0 ml-2">
                 <h4 class="text-base font-semibold text-dark-800 mb-4">Additional-Info</h4>
                 <ul class="space-y-2 list-disc">
-                    <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm">24*7 Booking Available</a></li>
+                    <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm">24/7 Booking Available</a></li>
                     <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm">Certified Vehical</a></li>
                     <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm">Well Trained Drivers</a></li>
                     <li><a href="#" class="text-dark-700 hover:text-dark-900 text-sm">On-Time Service</a></li>
@@ -104,7 +104,6 @@
         </div>
     </div>
     <div class="h-[0.9px] bg-black w-full"></div>
-    <p class="text-center text-gray-700 my-2">Copyright © 2024 kiteCab Taxi Service. All rights reserved.</p>
+    <p class="text-center text-gray-700 my-2">© 2024 kiteCab Taxi Service. All rights reserved.</p>
     <hr>
 </footer>
-<!-- ====== Footer Section End -->
