--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="flex justify-between items-center">
     <!-- Logo Section -->
-    <div class="relative mb-4 right-5 cursor-pointer" routerLink="/home">
+    <div class="relative mb-4 right-5 cursor-pointer" routerLink="/">
       <img src="https://i.postimg.cc/8kw15hwF/logo.png" height="100" width="280" alt="Logo">
     </div>
   
