chnages in fields ngonit or home.ts functions beacuse the loactions are not feching in pickup drop fields

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ $KiteCab-theme: mat.define-light-theme((
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family:sans-serif;
+body { margin: 0; font-family:Poppins;
   // color: map-get($map: $KiteCab-accent, $key:100 );
   // background-color: map-get($map: $KiteCab-territory, $key: 400);
  }
